syntax = "proto3";

package gorepick.api;
option go_package = "api";

import "google/protobuf/timestamp.proto";

message RegisterRequest {
  string username = 1;
  string password = 2;
}

message RegisterResponse {
  string token = 1;
}

message CreateTeamRequest {
  string name = 1;
  string info = 2;
}

message CreateTeamResponse {
  string token = 1;
}

message JoinTeamRequest {
  string name = 1;
  string token = 2;
}

message JoinTeamResponse {
}

message LeaveTeamRequest {
}

message LeaveTeamResponse {
}

message InfoRequest {
}

message InfoResponse {
  string username = 1;
  string team = 2;
  string teamInfo = 3;
  string teamToken = 4;
}

message EventsRequest {
}

message Event {
  enum EventType {
    register = 0;
    create = 1;
    join = 2;
    leave = 3;
  }
  google.protobuf.Timestamp timestamp = 1;
  EventType type = 2;
  string username = 3;
  string team = 4;
}

service Api {
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc CreateTeam (CreateTeamRequest) returns (CreateTeamResponse);
  rpc JoinTeam (JoinTeamRequest) returns (JoinTeamResponse);
  rpc LeaveTeam (LeaveTeamRequest) returns (LeaveTeamResponse);
  rpc Info (InfoRequest) returns (InfoResponse);
  rpc Events (EventsRequest) returns (stream Event);
}
